<resources>
    <string name="app_name">MinTicAplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentDescription_logo">Logo de aplicación</string>
    <string name="hint_email">Correo Electronico</string>
    <string name="Password_hint">Password</string>
    <string name="forgot_passwd">olvidaste la contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tengo_cuenta">No tengo cuenta</string>
    <string name="crear_una">Crear una</string>
    <string name="hint_name">Nombre</string>
    <string name="genero">Seleccione su genero</string>
    <string name="masculino_gen">masculino</string>
    <string name="femenino_gen">femenino</string>
    <string name="_gen">otro</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ya_tienes_cuenta">Ya tienes cuenta</string>
    <string name="ingresa_aqu">Ingresa aquí</string>
    <string name="crear_cuenta_">Crear cuenta</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="home">Home</string>
    <string name="location_label">Ubicacion</string>
    <string name="profile_label">Mi Perfil</string>
    <string name="specialist_label">Especialistas</string>
    <string name="profile_fragment_button_out">Cerrar Sesión</string>
    <string name="banner_title">CAMBIA TU VIDA PARA MEJOR</string>
    <string name="home_text_subtitle">Agenda una cita y te ayudaremos con el problema que te enfrentes</string>
    <string name="nuestros_servicios">Nuestros Servicios</string>
    <string name="nuestros_especialistas">Nuestros Especialistas</string>
    <string name="item_service_paragraph">Los mejores especialistas en medicina general</string>
    <string name="general">General</string>
    <string name="specialist_tittle">Especialidades</string>
    <string name="specialits_subtittle">Los Mejores especialistas en todas las areas</string>
    <string name="search">Buscar</string>
    <string name="generic_specialist_title">NUESTROS ESPECIALISTAS</string>
    <string name="generic_specialist_subtitle">"Agenda una cita con la especialidad de tu preferencia"</string>
</resources>