<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/fragment_home_banner"
        android:layout_width="@dimen/auto"
        android:layout_height="@dimen/banner_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner900x360"
        android:scaleType="fitXY">
    </com.google.android.material.imageview.ShapeableImageView>

    <TextView
        android:id="@+id/fragment_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_margin"
        android:text="@string/banner_title"
        android:textAppearance="@style/Title.Mintic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_banner" />

    <TextView
        android:id="@+id/fragment_home_subtitle"
        android:layout_width="@dimen/auto"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:layout_marginVertical="@dimen/big_margin"
        android:text="@string/home_text_subtitle"
        android:textAppearance="@style/subTitle.Mintic."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_home_title"
        android:gravity="center"/>

    <TextView
        android:id="@+id/fragment_home_service_list"
        android:layout_width="@dimen/auto"
        android:layout_height="wrap_content"
        android:text="@string/nuestros_servicios"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="@dimen/big_margin"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:textAlignment="center"
        android:textAppearance="@style/serviceList.Mintic."/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="@dimen/auto"
        android:layout_height="@dimen/auto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_service_list"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/small_margin"
        />
</androidx.constraintlayout.widget.ConstraintLayout>