<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <!-- vamos a dibujar la cartica -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragment_forgot_card"
        android:layout_width="@dimen/auto"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:cardElevation="@dimen/default_elevation"
        app:layout_constraintBottom_toTopOf="@id/recovery_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forgot_email_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/auto"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_email_input_box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recovery_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_forgot_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_forgot_label_no_tienes_cuenta"
        android:text="Recuperar Contraseña"
        android:textColor="@color/white">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.textview.MaterialTextView
        app:layout_constraintVertical_chainStyle="spread"
        android:id="@+id/fragment_forgot_label_no_tienes_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tengo_cuenta"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fragment_forgot_registrarse_buton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recovery_bottom"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginHorizontal="@dimen/default_margin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_forgot_registrarse_buton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_una"
        app:layout_constraintBottom_toBottomOf="@id/fragment_forgot_label_no_tienes_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_forgot_label_no_tienes_cuenta"
        app:layout_constraintTop_toTopOf="@+id/fragment_forgot_label_no_tienes_cuenta" />

</androidx.constraintlayout.widget.ConstraintLayout>